update weihua again

--- a/content/private/google.html
+++ b/content/private/google.html
@@ -269,6 +269,8 @@ summary(random)</code></pre>
 <ul>
 <li>How do you know which model to use?<br />
 </li>
+<li>First-differences estimator?<br />
+</li>
 <li>Is model controlling for time, or do you have to add that to the model explicitly?<br />
 </li>
 <li>Interaction effects? Namely, shooting characteristics and time.</li>
