--- a/content/private/google.html
+++ b/content/private/google.html
@@ -273,7 +273,10 @@ summary(random)</code></pre>
 </li>
 <li>Is model controlling for time, or do you have to add that to the model explicitly?<br />
 </li>
-<li>Interaction effects? Namely, shooting characteristics and time.</li>
+<li>Interaction effects? Namely, shooting characteristics and time.<br />
+</li>
+<li>Random slopes? Panel models vs multi-level models?<br />
+</li>
 <li>Dynamic panel models? Autocorrelation of DV?</li>
 </ul>
 <hr />
